# vllm_musa-0.6.6

./: CMakeLists.txt  README.md  build_musa.sh  musa_porting.py  requirements-musa.txt  setup.py
csrc_musa/: activation_kernels.mu  activation_kernels.mu.bak  cache_kernels.mu  cache_kernels.mu.bak  cuda_compat.h  custom_all_reduce.mu  custom_all_reduce.mu.bak  custom_all_reduce.muh  custom_all_reduce.muh.bak  custom_all_reduce_test.mu  layernorm_kernels.mu  layernorm_quant_kernels.mu  musa_utils.h  musa_utils_kernels.mu.bak  ops.h.bak  permute_cols.mu  pos_encoding_kernels.mu  pybind.cpp  reduction_utils.muh  torch_bindings.cpp  type_convert.muh
csrc_musa/attention/: attention_dtypes.h  attention_kernels.mu  attention_kernels.muh  attention_utils.muh  dtype_bfloat16.muh  dtype_float16.muh  dtype_float32.muh  dtype_fp8.muh  paged_attention_v1.mu  paged_attention_v2.mu
csrc_musa/cutlass_extensions/: common.cpp  common.hpp  vllm_numeric_conversion.muh  vllm_type_utils.muh
csrc_musa/cutlass_extensions/epilogue/: broadcast_load_epilogue_c3x.hpp
csrc_musa/mamba/causal_conv1d/: causal_conv1d.h  causal_conv1d.mu
csrc_musa/mamba/mamba_ssm/: selective_scan.h  selective_scan_fwd.mu
csrc_musa/moe/: marlin_moe_ops.mu  moe_align_sum_kernels.mu  topk_softmax_kernels.mu
csrc_musa/moe/marlin_kernels/: marlin_moe_kernel.h  marlin_moe_kernel_ku4.h  marlin_moe_kernel_ku4.mu  marlin_moe_kernel_ku4b8.h  marlin_moe_kernel_ku4b8.mu  marlin_moe_kernel_ku8b128.h  marlin_moe_kernel_ku8b128.mu
csrc_musa/prepare_inputs/: advance_step.mu  advance_step.muh
csrc_musa/quantization/aqlm/: gemm_kernels.mu
csrc_musa/quantization/awq/: dequantize.muh  gemm_kernels.mu
csrc_musa/quantization/compressed_tensors/: int8_quant_kernels.mu
csrc_musa/quantization/cutlass_w8a8/: scaled_mm_c2x.muh  scaled_mm_c3x.mu  scaled_mm_c3x.muh  scaled_mm_entry.mu
csrc_musa/quantization/fp8/: common.mu  fp8_marlin.mu
csrc_musa/quantization/fp8/amd/: hip_float8_impl.h  quant_utils.muh
csrc_musa/quantization/fp8/nvidia/: quant_utils.muh
csrc_musa/quantization/fused_kernels/: fused_layernorm_dynamic_per_token_quant.mu
csrc_musa/quantization/gguf/: dequantize.muh  ggml-common.h  gguf_kernel.mu  mmq.muh  mmvq.muh  vecdotq.muh
csrc_musa/quantization/gptq/: compat.muh  matrix_view.muh  q_gemm.mu
csrc_musa/quantization/gptq_marlin/: awq_marlin_repack.mu  gptq_marlin.mu  gptq_marlin_repack.mu  marlin.muh  marlin_dtypes.muh
csrc_musa/quantization/machete/: machete_mainloop.muh  machete_mm_kernel.muh  machete_mm_launcher.muh  machete_prepack_kernel.muh  machete_prepack_launcher.muh  machete_prepacked_layout.muh
csrc_musa/quantization/marlin/dense/: marlin_cuda_kernel.mu
csrc_musa/quantization/marlin/qqq/: marlin_qqq_gemm_kernel.mu
csrc_musa/quantization/marlin/sparse/: marlin_24_cuda_kernel.mu
csrc_musa/quantization/marlin/sparse/common/: mma.h
csrc_musa/rocm/: attention.mu
csrc_musa/sparse/cutlass/: sparse_compressor_c3x.mu  sparse_compressor_entry.mu  sparse_scaled_mm_c3x.mu  sparse_scaled_mm_c3x.muh  sparse_scaled_mm_entry.mu
vllm/: __init__.py  _custom_ops.py  _custom_ops.py.bal  utils.py
vllm/attention/: selector.py
vllm/attention/backends/: flash_attn.py
vllm/distributed/: parallel_state.py
vllm/distributed/device_communicators/: custom_all_reduce.py  pymccl.py  pymccl_utils.py
vllm/engine/: arg_utils.py
vllm/model_executor/layers/: linear.py
vllm/worker/: cache_engine.py  model_runner.py  worker.py
